@@ -37,6 +37,7 @@ extern "C" {
 
 asize_t caml_norm_minor_heap_size (intnat);
 int caml_reallocate_minor_heap(asize_t);
+void caml_update_minor_heap_max(uintnat minor_heap_wsz);
 
 /* is there a STW interrupt queued that needs servicing */
 int caml_incoming_interrupts_queued(void);
@@ -59,8 +60,10 @@ CAMLextern void (*caml_atfork_hook)(void);
 CAMLextern void (*caml_domain_stop_hook)(void);
 CAMLextern void (*caml_domain_external_interrupt_hook)(void);
 
-CAMLextern void caml_init_domains(uintnat minor_heap_size);
+CAMLextern void caml_init_domains(uintnat minor_heap_wsz);
 CAMLextern void caml_init_domain_self(int);
+
+CAMLextern uintnat caml_minor_heap_max_wsz;
 
 CAMLextern atomic_uintnat caml_num_domains_running;
 CAMLextern uintnat caml_minor_heaps_base;
